--- a/Notification/.env
+++ b/Notification/.env
@@ -2,4 +2,4 @@ DB_HOST=notification-db
 DB_USER=root
 DB_PASSWORD=root
 DB_DATABASE=db_notification
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=yourapikey
